--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 .swiftpm/
 .DS_Store
+Example App/MCEmojiPicker.xcodeproj/project.xcworkspace/xcuserdata/sebek.xcuserdatad/UserInterfaceState.xcuserstate
+Example App/MCEmojiPicker.xcodeproj/xcuserdata/sebek.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+Example App/MCEmojiPicker.xcodeproj/xcuserdata/sebek.xcuserdatad/xcschemes/xcschememanagement.plist
